# IndicPHI

india-agentic-ai-hackathon/: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
india-agentic-ai-hackathon/configs/: nim.env.example
india-agentic-ai-hackathon/configs/synthetic-data/: annotation_rules.yaml  doc_format_examples.yaml  doc_types.yaml  domains.yaml  entities.yaml  entity_format_examples.yaml  entity_profiles.yaml  languages.yaml  persona_name_pools.yaml  pipeline.diversity.yaml  pipeline.smoke.medium.yaml  (+3 more)
india-agentic-ai-hackathon/docs/: architecture.md  demo-script.md  diversification-120k.md  evaluation-plan.md  idea.md  plan.md  repair-flags-undo.md
india-agentic-ai-hackathon/main/: __init__.py
india-agentic-ai-hackathon/results/: README.md  eval_report.md  fluency_probe_20260721T031140Z.md  fluency_probe_20260721T032014Z.md  fluency_probe_grok_mni.md  fluency_probe_grok_sat.md  fluency_probe_grok_sat_mni.md  fluency_probe_smoke.md  fluency_probe_smoke_grok.md
india-agentic-ai-hackathon/scripts/: download_persona_shard.sh  new_run.sh  resume_s4b_20260724T100211.sh  resume_s5_20260724T100211.sh  run_demo.sh  run_s1_persona_sampling.sh  run_s2_taxonomy.sh  run_s3_prompt_construction.sh  run_s4_generation.sh  run_s5_linguistic_judge.sh  run_s6_deterministic_auditor.sh  run_s7_s8_curation.sh  run_s9_gliner_format.sh  run_ui.sh  smoke_test.sh  test_language_fluency.py
india-agentic-ai-hackathon/tests/: test_audit_fixes.py  test_script_purity_languages.py
india-agentic-ai-hackathon/ui/: README.md  index.html  package-lock.json  package.json
(+398 files in other folders)
