[project]
name = "hackgrid-indic-phi"
version = "0.1.0"
description = "HackGrid Indic-PHI synthetic clinical data pipeline (India Agentic AI Hackathon, Track C: SDG)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-designer>=0.7.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.0.0",
    "nemo-curator>=1.0.0",
    "pyarrow>=20.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
s1-persona-sample = "main.designers.persona_sampler:main"
s2-taxonomy = "main.designers.taxonomy:main"
s3-prompt-build = "main.designers.prompt_builder:main"
s4-generate = "main.designers.generator:main"
s5-linguistic-judge = "main.designers.linguistic_judge:main"
s6-deterministic-auditor = "main.designers.deterministic_auditor:main"
s7-s8-curate = "main.pipeline.curate:main"
s9-gliner-format = "main.pipeline.gliner_format:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]
